--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rocket-useform",
-  "version": "0.0.1",
-  "description": "Made with create-react-library",
+  "version": "0.0.4",
+  "description": "Rich useForm hooks. Make complex forms easily.",
   "author": "anthonyjeamme",
   "license": "MIT",
   "repository": "anthonyjeamme/rocket-useform",
