--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocket-useform",
-  "version": "0.0.27",
+  "version": "0.1.0",
   "description": "Rich useForm hooks. Make complex forms easily.",
   "author": "anthonyjeamme",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
-    "test": "run-s test:unit test:lint test:build",
+    "test": "run-s test:unit",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
@@ -44,6 +44,7 @@
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
